Fix adding parent div descBar for all descPanels
+doing this messed up the unlocking and locking of sets.
+new selectors/functions were made to fix this

--- a/myriadBuilder.css
+++ b/myriadBuilder.css
@@ -366,3 +366,12 @@ pre {
 #descBar::-webkit-scrollbar {
   display: none;
 }
+
+.option{
+    animation-name: flashingBorder;
+}
+
+@keyframes flashingBorder{
+    from{border-color: black;}
+    to{border-color: white;}
+}
